--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "type": "cppvsdbg",
             "request": "launch",
             "program": "enter program name, for example ${workspaceFolder}/a.exe",
+            "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "console": "externalTerminal"
